# gzmulti

./: .gitattributes  Doxyfile  Makefile.am  README.md  configure.ac
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
gzmulti/: Makefile.am  Makefile.in  gzmulti.c
include/: Makefile.am  Makefile.in
include/gzmulti/: Makefile.am  Makefile.in  gzmulti.h
lib/: Makefile.am  Makefile.in  gzmulti.h  libgzmulti.c
libgzmulti/: Makefile.am  Makefile.in  gzdelete.c  gzinsert.c  gzreplace.c  gzunpack.c  libgzmulti.c  utils.c  utils.h
